--- a/index.html
+++ b/index.html
@@ -1,41 +1,11 @@
-
-<!DOCTYPE html PUBLIC '-//W3C//DTD XHTML 1.0 Strict//EN' 'http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd'>
-<html>
-  <head>
-    <title>CHATJUNKIES.ORG</title>
-    <link rel='stylesheet' href='css.css' type='text/css' />
-  </head>
-  <body>
-    <div id='container'>
-      <pre>
-==================================================================
- ______ __           __   __               __     __
-|      |  |--.---.-.|  |_|__|.--.--.-----.|  |--.|__|.-----.-----.
-|   ---|     |  _  ||   _|  ||  |  |     ||    < |  ||  -__|__ --|
-|______|__|__|___._||____|  ||_____|__|__||__|__||__||_____|_____|
-                        |___|                          SiNCE 1999
-==================================================================</pre>
-        <div id='content'>
-          Welcome to chatjunkies.org</br>
-          chatjunkies.org ( <a href="irc://chatjunkies.org:6667/linuxhelp">6667</a> / <a href="ircs://chatjunkies.org:6697/linuxhelp">6697</a> SSL )</br>
-          </br>
-        </div>
-        ==================================================================
-    </div>
-<!-- Piwik -->
-<script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(["trackPageView"]);
-  _paq.push(["enableLinkTracking"]);
-
-  (function() {
-    var u=(("https:" == document.location.protocol) ? "https" : "http") + "://piwik.kees.nl/";
-    _paq.push(["setTrackerUrl", u+"piwik.php"]);
-    _paq.push(["setSiteId", "8"]);
-    var d=document, g=d.createElement("script"), s=d.getElementsByTagName("script")[0]; g.type="text/javascript";
-    g.defer=true; g.async=true; g.src=u+"piwik.js"; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<!-- End Piwik Code -->
-  </body>
-</html>
+<center>
+<pre>
+    __  __                      __     ________  ______
+   / / / /___  ____  ___  _____/ /_   /  _/ __ \/ ____/
+  / /_/ / __ \/ __ \/ _ \/ ___/ __/   / // /_/ / /     
+ / __  / /_/ / / / /  __(__  ) /_   _/ // _, _/ /___   
+/_/ /_/\____/_/ /_/\___/____/\__/  /___/_/ |_|\____/   
+                                                       
+Chatjunkies.org - 7000 - #linuxhelp
+</pre>
+</center>
