--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 /_/ /_/\____/_/ /_/\___/____/\__/  /___/_/ |_|\____/   
                                                        
 Chatjunkies.org - 7000 - #linuxhelp
+
+
+Est. 1999
 </pre>
 </center>
