--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
  / __  / /_/ / / / /  __(__  ) /_   _/ // _, _/ /___   
 /_/ /_/\____/_/ /_/\___/____/\__/  /___/_/ |_|\____/   
                                                        
-Chatjunkies.org - 7000 - #linuxhelp
+25.106.70.89:7000 coming soon.
 
-
-Est. 1999
+Hamachi Alpha Testing:
+HonestIRC-1, pswd: 123
 </pre>
 </center>
